# AutoReview-admin-tools

./: .gitignore  CMakeLists.txt  README.md
resources/icons/: icon.rc
src/: Common.h  Core.cpp  Core.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
translations/: language_ru.ts
